--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,20 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import 'pages/home';
+@import 'pages/welcome';
 
+html{
+  background-image: url("/img/background3.jpg");
+  background-repeat: no-repeat;
+  min-width: 1375px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -background-size: cover;
+
+}
+#container
+{
+  text-align: center;
+  position: relative;
+}
+
+/* Div specific classes */
