--- a/resources/assets/sass/pages/home.scss
+++ b/resources/assets/sass/pages/home.scss
@@ -1,4 +1,10 @@
-.bl-M
+.hr.mainHr
 {
-  color: green;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 7px;
+  border-color: $mainHrColor;
 }
