--- a/resources/assets/sass/pages/welcome.scss
+++ b/resources/assets/sass/pages/welcome.scss
@@ -1,15 +1,47 @@
-.welcome
+#welcome
 {
   width: 35%;
   height: auto;
   margin: 0 auto;
   background-color: white;
-  opacity:0.95;
+  opacity:0.90;
   filter:alpha(opacity=87); /* For IE8 and earlier */
   border: 2px solid;
   border-radius: 25px;
   font-size: 100%;
-  font-family: "Arial Black", Gadget, sans-serif;
+  font-family: Georgia, serif;
   text-align: center;
   margin-top: 9.3%;
+}
+#login
+{
+  width: 62%;
+  height: auto;
+  margin: 0 auto;
+  background-color: black;
+  display: inline-block;
+  opacity:0.87;
+  filter:alpha(opacity=87); /* For IE8 and earlier */
+  border: 2px solid;
+  border-radius: 25px;
+  font-family: Georgia, serif;
+}
+h3
+{
+  color: white;
+  text-decoration: underline;
+}
+hr
+{
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 7px;
+  border-color: green;
+}
+label.login
+{
+  color: white;
 }
