--- a/resources/assets/sass/utility/siteVars.scss
+++ b/resources/assets/sass/utility/siteVars.scss
@@ -1,5 +1,5 @@
 //Image Variable:
-$imgBackgound1: "/img/background3.jpg";
+$imgBackground1: "/img/background1.jpg";
 //Button Variables:
 $navButtonColor1: #25A6E1;
 $navButtonColor2: #188BC0;
@@ -9,4 +9,16 @@ $actButtonColor2: #188BC0;
 $mainHrColor: #009900;
 
 //Div Variables:
-$tLM-BGC: #D8D8D8;
+//Menus
+$topPosition: 1%;
+$topBackgroundColor: #202020;
+$bottomPosition: 1%;
+$bottomBackgroundColor: #202020;
+$sideMargin: 0;
+//Profiles
+$profileBackgroundColor: #D8D8D8;
+$profileOpacity: 0.85;
+//Content
+$centerBackgroundColor: #D8D8D8;
+$centerOpacity: 0.97;
+$centerPosition: 5%;
