--- a/resources/assets/sass/mixins/baseButton.scss
+++ b/resources/assets/sass/mixins/baseButton.scss
@@ -1,6 +1,8 @@
 @mixin baseButton
 {
+
   padding:8px 13px;
+  ::-moz-focus-inner { border: 0; padding: 0; margin:0; }
   color: #fff;
   font-family: "Comic Sans MS", cursive, sans-serif;
   font-size: 1.1em;
