--- a/resources/assets/sass/utility/siteVars.scss
+++ b/resources/assets/sass/utility/siteVars.scss
@@ -1,10 +1,12 @@
 //Image Variable:
 $imgBackground1: "/img/background1.jpg";
+$imgBackground2: "/img/background2.jpg";
+$imgBackground3: "/img/background3.jpg";
 //Button Variables:
-$navButtonColor1: #25A6E1;
+$actButtonColor1: #585858;
+$actButtonColor2: #000000;
+$navButtonColor1: #7dff23;
 $navButtonColor2: #188BC0;
-$actButtonColor1: #7dff23;
-$actButtonColor2: #188BC0;
 //Horizontal Line Variables:
 $mainHrColor: #009900;
 
