--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -80,7 +80,7 @@ html{
 .centerContent
 {
   @include centerContent($centerBackgroundColor, $centerOpacity);
-  margin: 65px auto;
+  margin: 105px auto;
   min-width: 10px;
 }
 .centerMenu
@@ -88,7 +88,7 @@ html{
   margin: 0 auto;
   width: 70%;
   height: auto;
-  background-color: black;
+
 }
 .centerText
 {
@@ -112,8 +112,7 @@ html{
     background: linear-gradient($actButtonColor1, $actButtonColor2); /* Standard syntax */
   }
 }
-.interactButton
-{
+.interactButton {
   @include colorActButton($actButtonColor1, $actButtonColor2);
   @include baseButton;
   &:hover {
@@ -125,4 +124,8 @@ html{
 
   }
   color: #7dff23;
+}
+h2
+{
+  text-decoration: underline;
 }
