--- a/resources/assets/sass/utility/siteVars.scss
+++ b/resources/assets/sass/utility/siteVars.scss
@@ -18,9 +18,9 @@ $bottomPosition: 1%;
 $bottomBackgroundColor: #202020;
 $sideMargin: 0;
 //Profiles
-$profileBackgroundColor: #D8D8D8;
+$profileBackgroundColor: #E8E8E8  ;
 $profileOpacity: 0.85;
 //Content
-$centerBackgroundColor: #D8D8D8;
+$centerBackgroundColor: #E8E8E8 ;
 $centerOpacity: 0.97;
 $centerPosition: 5%;
