--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,6 +20,7 @@ html{
   -o-background-size: cover;
   background-size: cover;
   min-width: 1000px;
+  background-color: black;
 
 
 }
@@ -41,6 +42,7 @@ html{
   left: $sideMargin;
   top: $topPosition;
   min-width: 400px;
+
 }
 .bottomLeftMenu
 {
@@ -86,7 +88,7 @@ html{
 .centerMenu
 {
   margin: 0 auto;
-  width: 70%;
+  width: 90%;
   height: auto;
 
 }
