--- a/resources/assets/sass/mixins/profileDiv.scss
+++ b/resources/assets/sass/mixins/profileDiv.scss
@@ -10,6 +10,6 @@
   border-radius: 20px;
   opacity: $opacity;
   filter: alpha(opacity-75); /* For IE8 and earlier */
-  font-family: "Arial Black", Gadget, sans-serif;
+  font-family: Verdana, Geneva, sans-serif;
 
 }
