--- a/resources/assets/sass/utility/siteVars.scss
+++ b/resources/assets/sass/utility/siteVars.scss
@@ -2,11 +2,16 @@
 $imgBackground1: "/img/background1.jpg";
 $imgBackground2: "/img/background2.jpg";
 $imgBackground3: "/img/background3.jpg";
-//Button Variables:
-$actButtonColor1: #585858;
+//Action Button Variables:
+$actButtonColor1: #003300;
 $actButtonColor2: #000000;
+$actHoverColor1:  #7dff23;
+$actHoverColor2:  #000066;
+//Nav Buttons
 $navButtonColor1: #7dff23;
 $navButtonColor2: #188BC0;
+$navHoverColor1:  #188BC0;
+$navHoverColor2:  #7dff23;
 //Horizontal Line Variables:
 $mainHrColor: #009900;
 
