--- a/resources/assets/sass/mixins/baseButton.scss
+++ b/resources/assets/sass/mixins/baseButton.scss
@@ -2,13 +2,11 @@
 {
 
   padding:8px 13px;
-  ::-moz-focus-inner { border: 0; padding: 0; margin:0; }
-  color: #fff;
   font-family: "Comic Sans MS", cursive, sans-serif;
-  font-size: 1.1em;
+  font-size: 100%;
   border-radius:4px;
   -moz-border-radius:4px;
   -webkit-border-radius:4px;
-  border:1px solid #1A87B9;
+  border:1px solid #003300;
   text-shadow: 3px 3px 10px #000000; /* FF3.5+, Opera 9+, Saf1+, Chrome, IE10 */
 }
