--- a/resources/assets/sass/pages/welcome.scss
+++ b/resources/assets/sass/pages/welcome.scss
@@ -3,13 +3,12 @@
   width: 35%;
   height: auto;
   margin: 0 auto;
-  background-color: white;
+  background-color: #E8E8E8;
   opacity:0.90;
-  filter:alpha(opacity=87); /* For IE8 and earlier */
+  filter:alpha(opacity=90); /* For IE8 and earlier */
   border: 2px solid;
   border-radius: 25px;
-  font-size: 100%;
-  font-family: Georgia, serif;
+  font-family: Verdana, Geneva, sans-serif;
   text-align: center;
   margin-top: 9.3%;
 }
@@ -18,13 +17,11 @@
   width: 62%;
   height: auto;
   margin: 0 auto;
-  background-color: black;
-  display: inline-block;
-  opacity:0.87;
-  filter:alpha(opacity=87); /* For IE8 and earlier */
+  background-color: #202020;
+  opacity:0.9;
+  filter:alpha(opacity=90); /* For IE8 and earlier */
   border: 2px solid;
   border-radius: 25px;
-  font-family: Georgia, serif;
 }
 h3
 {
