--- a/resources/assets/sass/utility/siteVars.scss
+++ b/resources/assets/sass/utility/siteVars.scss
@@ -1,17 +1,19 @@
 //Image Variable:
 $imgBackground1: "/img/background1.jpg";
-$imgBackground2: "/img/background2.jpg";
-$imgBackground3: "/img/background3.jpg";
 //Action Button Variables:
-$actButtonColor1: #003300;
-$actButtonColor2: #000000;
-$actHoverColor1:  #7dff23;
-$actHoverColor2:  #000066;
+$actButtonColor1: #000000;
+$actButtonColor2: #383838;
+$actHoverColor1:  #000000;
+$actHoverColor2:  #33FF33;
+$actTextColor:    #7dff23;
+$actTextHoverColor: #FFFFFF;
 //Nav Buttons
 $navButtonColor1: #7dff23;
 $navButtonColor2: #188BC0;
-$navHoverColor1:  #188BC0;
-$navHoverColor2:  #7dff23;
+$navHoverColor1:  #33FF33;
+$navHoverColor2:  #000000;
+$navTextColor:    #FFFFFF;
+$navTextHoverColor: #FFFFFF;
 //Horizontal Line Variables:
 $mainHrColor: #009900;
 
@@ -23,9 +25,9 @@ $bottomPosition: 1%;
 $bottomBackgroundColor: #202020;
 $sideMargin: 0;
 //Profiles
-$profileBackgroundColor: #E8E8E8  ;
+$profileBackgroundColor: #E8E8E8;
 $profileOpacity: 0.85;
 //Content
-$centerBackgroundColor: #E8E8E8 ;
+$centerBackgroundColor: #E8E8E8;
 $centerOpacity: 0.97;
 $centerPosition: 5%;
