--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -115,6 +115,11 @@ table, td {
   opacity: $centerOpacity;
 
 }
+//Errors:
+.errors
+{
+  background-color: red;
+}
 //TextField for posts, extensions, drafts
 .createBodyText
 {
