Cleaned up verification and invites

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -42,6 +42,19 @@ table, td {
 }
 
 /* Div specific */
+//Flash Messages:
+.flash-info
+{
+  color: #009900;
+}
+.flash-success
+{
+  color: #009900;
+}
+.flash-danger
+{
+  color: red;
+}
 
 //Menus:
 .topLeftMenu
