--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -32,13 +32,13 @@ html{
 }
 table {
   border-collapse: separate;
-  border-spacing: 0;
+  border-spacing: 3px;
 }
 table, td {
   border: 1px solid black;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  padding: 5px;
+  border-radius: 7px;
+  -moz-border-radius: 7px;
+  padding: 3px;
 }
 
 /* Div specific */
