--- a/resources/assets/sass/pages/welcome.scss
+++ b/resources/assets/sass/pages/welcome.scss
@@ -14,7 +14,7 @@
 }
 #login
 {
-  width: 62%;
+  width: 69%;
   height: auto;
   margin: 0 auto;
   background-color: #202020;
@@ -41,4 +41,8 @@ hr
 label.login
 {
   color: white;
+}
+.welcomeInputText
+{
+  width: 14em;
 }
