--- a/resources/assets/sass/utility/siteVars.scss
+++ b/resources/assets/sass/utility/siteVars.scss
@@ -26,7 +26,8 @@ $bottomBackgroundColor: #202020;
 $sideMargin: 0;
 //Profiles
 $profileBackgroundColor: #E8E8E8;
-$profileOpacity: 0.85;
+$profileOpacity: 0.7;
+$profileTransition: opacity 1s;
 //Content
 $centerBackgroundColor: #E8E8E8;
 $centerOpacity: 0.97;
