--- a/resources/assets/sass/mixins/profileDiv.scss
+++ b/resources/assets/sass/mixins/profileDiv.scss
@@ -1,4 +1,4 @@
-@mixin profileDiv($backgroundColor, $opacity)
+@mixin profileDiv($backgroundColor)
 {
   width: 24%;
   height: auto;
@@ -8,8 +8,7 @@
   position: fixed;
   border: 1px solid;
   border-radius: 20px;
-  opacity: $opacity;
-  filter: alpha(opacity-75); /* For IE8 and earlier */
   font-family: Verdana, Geneva, sans-serif;
+  z-index: 1;
 
 }
