--- a/resources/assets/sass/mixins/baseButton.scss
+++ b/resources/assets/sass/mixins/baseButton.scss
@@ -2,11 +2,12 @@
 {
 
   padding:8px 13px;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: "Comic Sans MS", Arial, sans-serif;
   font-size: 100%;
   border-radius:4px;
   -moz-border-radius:4px;
   -webkit-border-radius:4px;
   border:1px solid #003300;
-  text-shadow: 3px 3px 10px #000000; /* FF3.5+, Opera 9+, Saf1+, Chrome, IE10 */
+  text-shadow: 3px 3px 10px #000000;
+
 }
