--- a/resources/assets/sass/utility/siteVars.scss
+++ b/resources/assets/sass/utility/siteVars.scss
@@ -24,6 +24,11 @@ $topBackgroundColor: #202020;
 $bottomPosition: 1%;
 $bottomBackgroundColor: #202020;
 $sideMargin: 0;
+//Inner Side Menus
+$profileScrollHeight: 155px;
+$homeScrollHeight: 125px;
+$photoScrollHeight: 200px;
+
 //Profiles
 $profileBackgroundColor: #E8E8E8;
 $profileOpacity: 0.7;
@@ -32,3 +37,5 @@ $profileTransition: opacity 1s;
 $centerBackgroundColor: #E8E8E8;
 $centerOpacity: 0.97;
 $centerPosition: 5%;
+
+
