New Navigiation and Layout

--- a/resources/assets/sass/utility/siteVars.scss
+++ b/resources/assets/sass/utility/siteVars.scss
@@ -8,9 +8,9 @@ $actHoverColor2:  #33FF33;
 $actTextColor:    #7dff23;
 $actTextHoverColor: #FFFFFF;
 //Nav Buttons
-$navButtonColor1: #7dff23;
+$navButtonColor1: #33FF00;
 $navButtonColor2: #188BC0;
-$navHoverColor1:  #33FF33;
+$navHoverColor1:  #33FF00;
 $navHoverColor2:  #000000;
 $navTextColor:    #FFFFFF;
 $navTextHoverColor: #FFFFFF;
@@ -28,6 +28,7 @@ $sideMargin: 0;
 $profileScrollHeight: 155px;
 $homeScrollHeight: 125px;
 $photoScrollHeight: 200px;
+$navScrollHeight: 567px;
 
 //Profiles
 $profileBackgroundColor: #E8E8E8;
