--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -53,6 +53,10 @@ table, td {
   -moz-border-radius: 7px;
   padding: 3px;
 }
+.leftTDAlign
+{
+  text-align: left;
+}
 h2
 {
   text-decoration: underline;
@@ -125,7 +129,14 @@ ul
 .innerHomeMenus
 {
   @include innerMenu($homeScrollHeight);
-  width: 85%
+  width: 85%;
+}
+.innerNavMenus
+{
+  margin: 0 auto;
+  overflow: auto;
+  width: auto;
+  height: 867px;
 }
 .innerPhotos
 {
@@ -137,15 +148,15 @@ ul
 #centerContent
 {
   width: 50%;
-  height: auto;
+  height: 91%;
   background-color: $centerBackgroundColor;
   opacity: $centerOpacity;
   border: 2px solid;
   border-radius: 25px;
   font-family: Verdana, Geneva, sans-serif;
   z-index: 2;
-  margin: 37.7px auto;
-  min-width: 300px;
+  margin: 2.1% auto;
+  min-width: 350px;
 }
 #centerMenu
 {
@@ -155,16 +166,20 @@ ul
 }
 #centerText
 {
-  margin: 0 auto;
-  width: 95%;
-  height: auto;
+  margin: 5px auto;
+  overflow: auto;
+  height: 850px;
+  width: 99%;
 }
 #centerTextContent
 {
   text-align: left;
   font-size: 125%;
-  height: 561px;
+  height: 650px;
   overflow: auto;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 #createOptions
 {
@@ -197,18 +212,14 @@ ul
   @include baseTextField();
   font-size: 125%;
 }
-
 #centerFooter
 {
+  @include menuDiv($bottomBackgroundColor);
+  bottom: .1%;
+  left: 0;
+  right: 0;
+  width: 310px;
 
-  margin: 0 auto;
-  width: 50%;
-  height: auto;
-  background-color: #202020;
-  opacity: $centerOpacity;
-  border: 2px solid;
-  border-radius: 25px;
-  color: #ffffff;
 }
 
 /* Button specific */
