--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -22,6 +22,124 @@ html{
   -o-background-size: cover;
   background-size: cover;
 }
+
+//Navigation
+nav {
+  background-color: #101010;
+  border: 1px solid #A8A8A8;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
+  color: #FFFFFF;
+  display: block;
+  margin: .5% auto;
+  overflow: hidden;
+  width: 25%;
+
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline-block;
+  list-style-type: none;
+  border-radius:4px;
+  -moz-border-radius:4px;
+  -webkit-border-radius:4px;
+  border:1px solid #101010;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+nav > ul > li > a > .caret {
+  border-top: 4px solid #aaa;
+  border-right: 4px solid transparent;
+  border-left: 4px solid transparent;
+  content: "";
+  display: inline-block;
+  height: 0;
+  width: 0;
+  vertical-align: middle;
+  -webkit-transition: color 0.1s linear;
+  -moz-transition: color 0.1s linear;
+  -o-transition: color 0.1s linear;
+  transition: color 0.1s linear;
+
+}
+
+nav > ul > li > a {
+  color: #A8A8A8;
+  display: block;
+  line-height: 56px;
+  padding: 0 24px;
+  text-decoration: none;
+}
+
+nav > ul > li:hover {
+  border-radius:4px;
+  -moz-border-radius:4px;
+  -webkit-border-radius:4px;
+  border:1px solid #003300;
+  color: $navTextHoverColor;
+  background: -webkit-linear-gradient($navHoverColor1, $navHoverColor2);
+  background: -o-linear-gradient($navHoverColor1, $navHoverColor2);
+  background: -moz-linear-gradient($navHoverColor1, $navHoverColor2);
+  background: linear-gradient($navHoverColor1, $navHoverColor2);
+}
+
+nav > ul > li:hover > a {
+  color: rgb( 255, 255, 255 );
+}
+
+nav > ul > li:hover > a > .caret {
+  border-top-color: rgb( 255, 255, 255 );
+}
+
+nav > ul > li > div {
+  background-color: rgb( 40, 44, 47 );
+  border-top: 0;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
+  display: none;
+  margin: 0;
+  opacity: 0;
+  position: absolute;
+  width: 165px;
+  visibility: hidden;
+  z-index: 100;
+  -webkit-transiton: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -ms-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  -transition: opacity 0.2s;
+}
+
+nav > ul > li:hover > div {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
+nav > ul > li > div ul > li {
+  display: block;
+}
+
+nav > ul > li > div ul > li > a {
+  color: #fff;
+  display: block;
+  padding: 12px 24px;
+  text-decoration: none;
+}
+
+nav > ul > li > div ul > li:hover > a {
+  background-color: rgba( 255, 255, 255, 0.1);
+}
+
 //Containers:
 #container
 {
@@ -60,10 +178,7 @@ h2
 {
   text-decoration: underline;
 }
-ul
-{
-  text-align: left;
-}
+
 
 //Flash Messages:
 .flash-info
@@ -111,18 +226,18 @@ ul
 {
   @include menuDiv($bottomBackgroundColor);
   right: $sideMargin;
-  bottom: $bottomPosition;
+  //bottom: $bottomPosition;
 }
 
 #leftSide
 {
   @include sideDiv($profileBackgroundColor);
-  left: 0;
+  left: 2em;
 }
 #rightSide
 {
   @include sideDiv($profileBackgroundColor);
-  right: 0;
+  right: 2em;
 }
 
 //Inner Menus
@@ -153,10 +268,10 @@ ul
 #centerContent
 {
   width: 50%;
-  height: 91%;
+  height: 84%;
   font-family: Verdana, Geneva, sans-serif;
   z-index: 2;
-  margin: 2.1% auto;
+  margin: 1.5% auto;
 }
 article
 {
