--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -24,25 +24,25 @@ html{
 }
 
 //Navigation
-nav {
+nav
+{
+  font-family: "Comic Sans MS", Arial, sans-serif;
   background-color: #101010;
   border: 1px solid #A8A8A8;
   border-radius: 4px;
-  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
   color: #FFFFFF;
   display: block;
   margin: .5% auto;
   overflow: hidden;
   width: 25%;
-
 }
-
-nav ul {
+nav ul
+{
   margin: 0;
   padding: 0;
 }
-
-nav ul li {
+nav ul li
+{
   display: inline-block;
   list-style-type: none;
   border-radius:4px;
@@ -55,8 +55,8 @@ nav ul li {
   -o-transition: all 0.2s;
   transition: all 0.2s;
 }
-
-nav > ul > li > a > .caret {
+nav > ul > li > a > .caret
+{
   border-top: 4px solid #aaa;
   border-right: 4px solid transparent;
   border-left: 4px solid transparent;
@@ -69,18 +69,17 @@ nav > ul > li > a > .caret {
   -moz-transition: color 0.1s linear;
   -o-transition: color 0.1s linear;
   transition: color 0.1s linear;
-
 }
-
-nav > ul > li > a {
+nav > ul > li > a
+{
   color: #A8A8A8;
   display: block;
   line-height: 56px;
   padding: 0 24px;
   text-decoration: none;
 }
-
-nav > ul > li:hover {
+nav > ul > li:hover
+{
   border-radius:4px;
   -moz-border-radius:4px;
   -webkit-border-radius:4px;
@@ -92,15 +91,18 @@ nav > ul > li:hover {
   background: linear-gradient($navHoverColor1, $navHoverColor2);
 }
 
-nav > ul > li:hover > a {
+nav > ul > li:hover > a
+{
   color: rgb( 255, 255, 255 );
 }
 
-nav > ul > li:hover > a > .caret {
+nav > ul > li:hover > a > .caret
+{
   border-top-color: rgb( 255, 255, 255 );
 }
 
-nav > ul > li > div {
+nav > ul > li > div
+{
   background-color: rgb( 40, 44, 47 );
   border-top: 0;
   border-radius: 0 0 4px 4px;
@@ -119,24 +121,28 @@ nav > ul > li > div {
   -transition: opacity 0.2s;
 }
 
-nav > ul > li:hover > div {
+nav > ul > li:hover > div
+{
   display: block;
   opacity: 1;
   visibility: visible;
 }
 
-nav > ul > li > div ul > li {
+nav > ul > li > div ul > li
+{
   display: block;
 }
 
-nav > ul > li > div ul > li > a {
+nav > ul > li > div ul > li > a
+{
   color: #fff;
   display: block;
   padding: 12px 24px;
   text-decoration: none;
 }
 
-nav > ul > li > div ul > li:hover > a {
+nav > ul > li > div ul > li:hover > a
+{
   background-color: rgba( 255, 255, 255, 0.1);
 }
 
@@ -159,12 +165,14 @@ nav > ul > li > div ul > li:hover > a {
   transition: opacity 1s;
 }
 
-table {
+table
+{
   border-collapse: separate;
   border-spacing: 3px;
 
 }
-table, td {
+table, td
+{
   border: 1px solid black;
   border-radius: 7px;
   -moz-border-radius: 7px;
@@ -173,10 +181,6 @@ table, td {
 .leftTDAlign
 {
   text-align: left;
-}
-h2
-{
-  text-decoration: underline;
 }
 
 
@@ -232,12 +236,12 @@ h2
 #leftSide
 {
   @include sideDiv($profileBackgroundColor);
-  left: 2em;
+  left: 3em;
 }
 #rightSide
 {
   @include sideDiv($profileBackgroundColor);
-  right: 2em;
+  right: 3em;
 }
 
 //Inner Menus
@@ -268,7 +272,7 @@ h2
 #centerContent
 {
   width: 50%;
-  height: 84%;
+  height: 80%;
   font-family: Verdana, Geneva, sans-serif;
   z-index: 2;
   margin: 1.5% auto;
@@ -350,7 +354,8 @@ article
 {
   @include baseButton;
   @include colorNavButton($navButtonColor1, $navButtonColor2, $navTextColor);
-  &:hover {
+  &:hover
+  {
     color: $navTextHoverColor;
     background: -webkit-linear-gradient($navHoverColor1, $navHoverColor2);
     background: -o-linear-gradient($navHoverColor1, $navHoverColor2);
@@ -358,10 +363,12 @@ article
     background: linear-gradient($navHoverColor1, $navHoverColor2);
   }
 }
-.interactButton {
+.interactButton
+{
   @include baseButton;
   @include colorActButton($actButtonColor1, $actButtonColor2, $actTextColor);
-  &:hover {
+  &:hover
+  {
     color: $actTextHoverColor;
     background: -webkit-linear-gradient($actHoverColor1, $actHoverColor2);
     background: -o-linear-gradient($actHoverColor1, $actHoverColor2);
