--- a/resources/assets/sass/utility/siteVars.scss
+++ b/resources/assets/sass/utility/siteVars.scss
@@ -12,11 +12,11 @@ $navTextColor:    #FFFFFF;
 $navTextHoverColor: #FFFFFF;
 
 //Action Button Variables:
-$actButtonColor2: #E8E8E8;
-$actButtonColor1: #E8E8E8;
+$actButtonColor2: #101010;
+$actButtonColor1: #000000;
 $actHoverColor1:  #000000;
 $actHoverColor2:  #33FF33;
-$actTextColor:    #003300;
+$actTextColor:    #A8A8A8;
 $actTextHoverColor: #FFFFFF;
 
 //Content
