--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -34,7 +34,7 @@ nav
   display: block;
   margin: .5% auto;
   overflow: hidden;
-  width: 25%;
+  width: auto;
 }
 nav ul
 {
@@ -44,6 +44,7 @@ nav ul
 nav ul li
 {
   display: inline-block;
+  width: auto;
   list-style-type: none;
   border-radius:4px;
   -moz-border-radius:4px;
@@ -309,6 +310,7 @@ article
   padding-right: 15px;
   height: auto;
   max-height: 557px;
+  overflow:auto;
 
 }
 #createOptions
