--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,7 +3,9 @@
 // Base Imports
 @import 'pages/layoutDivs';
 @import 'pages/welcome';
-//Button Mixins
+
+//Navigation Mixins
+@import 'mixins/nav';
 @import 'mixins/baseButton';
 @import 'mixins/colorButton';
 // Div Mixins
@@ -22,9 +24,30 @@ html{
   -o-background-size: cover;
   background-size: cover;
 }
+/* unvisited link */
+a:link {
+  color: #188BC0;
+  text-decoration: none;
+}
+
+/* visited link */
+a:visited {
+  color: #202020;
+
+}
+/* mouse over link */
+a:hover {
+  color: #009900;
+}
+
+/* selected link */
+a:active {
+  color: #00CC33;
+
+}
 
 //Navigation
-nav
+.topNav
 {
   font-family: "Comic Sans MS", Arial, sans-serif;
   background-color: #101010;
@@ -33,15 +56,14 @@ nav
   color: #FFFFFF;
   display: block;
   margin: .5% auto;
-  overflow: hidden;
-  width: auto;
+  max-width: 25%;
 }
-nav ul
+.topNav ul
 {
   margin: 0;
   padding: 0;
 }
-nav ul li
+.topNav ul li
 {
   display: inline-block;
   width: auto;
@@ -56,7 +78,7 @@ nav ul li
   -o-transition: all 0.2s;
   transition: all 0.2s;
 }
-nav > ul > li > a > .caret
+.topNav > ul > li > a > .caret
 {
   border-top: 4px solid #aaa;
   border-right: 4px solid transparent;
@@ -71,7 +93,7 @@ nav > ul > li > a > .caret
   -o-transition: color 0.1s linear;
   transition: color 0.1s linear;
 }
-nav > ul > li > a
+.topNav > ul > li > a
 {
   color: #A8A8A8;
   display: block;
@@ -79,7 +101,7 @@ nav > ul > li > a
   padding: 0 24px;
   text-decoration: none;
 }
-nav > ul > li:hover
+.topNav > ul > li:hover
 {
   border-radius:4px;
   -moz-border-radius:4px;
@@ -92,19 +114,19 @@ nav > ul > li:hover
   background: linear-gradient($navHoverColor1, $navHoverColor2);
 }
 
-nav > ul > li:hover > a
+.topNav > ul > li:hover > a
 {
   color: rgb( 255, 255, 255 );
 }
 
-nav > ul > li:hover > a > .caret
+.topNav > ul > li:hover > a > .caret
 {
   border-top-color: rgb( 255, 255, 255 );
 }
 
-nav > ul > li > div
+.topNav > ul > li > div
 {
-  background-color: rgb( 40, 44, 47 );
+  background-color: #202020;
   border-top: 0;
   border-radius: 0 0 4px 4px;
   box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
@@ -122,30 +144,204 @@ nav > ul > li > div
   -transition: opacity 0.2s;
 }
 
-nav > ul > li:hover > div
+.topNav > ul > li:hover > div
 {
   display: block;
   opacity: 1;
   visibility: visible;
 }
 
-nav > ul > li > div ul > li
+.topNav > ul > li > div ul > li
 {
   display: block;
 }
 
-nav > ul > li > div ul > li > a
+.topNav > ul > li > div ul > li > a
 {
-  color: #fff;
+  color: #E8E8E8;
   display: block;
   padding: 12px 24px;
   text-decoration: none;
 }
 
-nav > ul > li > div ul > li:hover > a
+.topNav > ul > li > div ul > li:hover > a
 {
-  background-color: rgba( 255, 255, 255, 0.1);
+  background-color: #303030;
 }
+//Profile Navigiaton
+.profileNav
+{
+  font-family: "Comic Sans MS", Arial, sans-serif;
+  background-color: #E8E8E8;
+  border: 1px solid #E8E8E8;
+  border-radius: 4px;
+  color: #000000;
+  width: 85%;
+  margin: .5% auto;
+}
+.profileNav ul
+{
+  margin: 0;
+  padding: 0;
+}
+.profileNav ul li
+{
+  display: inline-block;
+  width: auto;
+  list-style-type: none;
+  border-radius:4px;
+  -moz-border-radius:4px;
+  -webkit-border-radius:4px;
+  border:1px solid #E8E8E8;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.profileNav > ul > li > a
+{
+  color: #202020;
+  display: block;
+  line-height: 56px;
+  padding: 0 24px;
+  text-decoration: none;
+}
+.profileNav > ul > li:hover
+{
+  border-radius:4px;
+  -moz-border-radius:4px;
+  -webkit-border-radius:4px;
+  border:1px solid #003300;
+  color: $navTextHoverColor;
+  background: -webkit-linear-gradient($navHoverColor1, $navHoverColor2);
+  background: -o-linear-gradient($navHoverColor1, $navHoverColor2);
+  background: -moz-linear-gradient($navHoverColor1, $navHoverColor2);
+  background: linear-gradient($navHoverColor1, $navHoverColor2);
+}
+
+.profileNav > ul > li:hover > a
+{
+  color: rgb( 255, 255, 255 );
+}
+
+.profileNav > ul > li > div
+{
+  background-color: #202020;
+  border-top: 0;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
+  display: none;
+  margin: 0;
+  opacity: 0;
+  position: absolute;
+  width: 165px;
+  visibility: hidden;
+  z-index: 100;
+  -webkit-transiton: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -ms-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  -transition: opacity 0.2s;
+}
+
+.profileNav > ul > li:hover > div
+{
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
+.profileNav > ul > li > div ul > li
+{
+  display: block;
+  border:1px solid #101010;
+}
+
+.profileNav > ul > li > div ul > li > a
+{
+  color: #E8E8E8;
+  display: block;
+  padding: 12px 24px;
+  text-decoration: none;
+}
+
+.profileNav > ul > li > div ul > li:hover > a
+{
+  background-color: #303030;
+}
+
+//Pagination
+.pagination {
+  display: inline-block;
+  padding-left: 0;
+  margin: 10px 0;
+  border-radius: 4px;
+}
+.pagination > ul
+{
+  width: 90%;
+}
+.pagination > li {
+  display: inline;
+}
+.pagination > li > a,
+.pagination > li > span {
+  position: relative;
+  float: left;
+  padding: 3px 7px;
+  margin-left: -1px;
+  line-height: 1.42857143;
+  color: #202020;
+  text-decoration: none;
+  background-color: #fff;
+  border: 1px solid #ddd;
+}
+.pagination > li:first-child > a,
+.pagination > li:first-child > span {
+  margin-left: 0;
+  border-top-left-radius: 14px;
+  border-bottom-left-radius: 14px;
+}
+.pagination > li:last-child > a,
+.pagination > li:last-child > span {
+  border-top-right-radius: 14px;
+  border-bottom-right-radius: 14px;
+}
+.pagination > li > a:hover,
+.pagination > li > span:hover,
+.pagination > li > a:focus,
+.pagination > li > span:focus {
+  z-index: 2;
+  color: #009900;
+  background-color: #202020;
+  border-color: #E8E8E8;
+}
+.pagination > .active > a,
+.pagination > .active > span,
+.pagination > .active > a:hover,
+.pagination > .active > span:hover,
+.pagination > .active > a:focus,
+.pagination > .active > span:focus {
+  z-index: 3;
+  color: #009900;
+  cursor: default;
+  background-color: #202020;
+  border-color: #009900;
+}
+.pagination > .disabled > span,
+.pagination > .disabled > span:hover,
+.pagination > .disabled > span:focus,
+.pagination > .disabled > a,
+.pagination > .disabled > a:hover,
+.pagination > .disabled > a:focus {
+  color: #202020;
+  cursor: not-allowed;
+  background-color: #fff;
+  border-color: #000000;
+}
+
 
 //Containers:
 #container
@@ -172,7 +368,7 @@ table
   border-spacing: 3px;
 
 }
-table, td
+td
 {
   border: 1px solid black;
   border-radius: 7px;
@@ -345,7 +541,7 @@ article
 {
   background-color: $bottomBackgroundColor;
   margin: 0 auto;
-  width: 50%;
+  display: inline-block;
   border: 1px solid;
   border-radius: 20px;
   opacity: 0.9;
