--- a/resources/assets/sass/mixins/colorButton.scss
+++ b/resources/assets/sass/mixins/colorButton.scss
@@ -5,6 +5,7 @@
   background: -o-linear-gradient($color1, $color2); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient($color1, $color2); /* For Firefox 3.6 to 15 */
   background: linear-gradient($color1, $color2); /* Standard syntax */
+  border: 1px solid #202020;
 }
 @mixin colorActButton($color1, $color2, $actTextColor)
 {
@@ -13,4 +14,5 @@
   background: -o-linear-gradient($color1, $color2); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient($color1, $color2); /* For Firefox 3.6 to 15 */
   background: linear-gradient($color1, $color2); /* Standard syntax */
+  border: 1px solid #E8E8E8;
 }
